--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,10 @@
 root = true
 
-[*{lua, md}]
-charset = "utf-8"
+[*]
+charset = utf-8
 trim_trailing_whitespace = true
 indent_style = tab
 indent_size = 4
+
+[*.{yaml,yml,md}]
+indent_style = space
